# Mission_Im_Possible

./: Dockerfile  LICENSE  README.md  cli.py  environment.yml  pyproject.toml
examples/: custom_stack.py  medical_imaging.py  multimodal_sentiment.py  object_detection.py
missionimpossible/: __init__.py
missionimpossible/core/: __init__.py  detector.py  installer.py  resolver.py
missionimpossible/detectors/: cnn_detector.py  gpu_detector.py  nlp_detector.py  vision_detector.py
missionimpossible/resolvers/: framework_resolver.py  stack_resolver.py  yolo_resolver.py
missionimpossible/utils/: __init__.py  environment.py  preset_manager.py  pypi_api.py
presets/: lightweight.toml  production.toml  research.toml
presets/custom/: my_thesis.toml
tests/: test_detectors.py  test_resolvers.py  test_yolo_dynamic.py
